# orbital-radar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  _typos.toml  pyproject.toml
.github/workflows/: test.yml
src/orbital_radar/: __init__.py  __main__.py  helpers.py  orbital_radar_config.toml  radar.py  radarspec.py  simulator.py  suborbital.py
src/orbital_radar/data/: CPR_PointTargetResponse.txt
src/orbital_radar/plotting/: curtains.py  histogram.py  scatter.py
src/orbital_radar/readers/: cloudnet.py  config.py  radar.py  rangewf.py
src/orbital_radar/writers/: spaceview.py
test/: test_plot.py  test_radarspec.py  test_reader.py  test_suborbital.py
tests/: test_orbital_radar.py
tests/data/: truncated-categorize.nc
