[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbital-radar"
authors = [
  {name = "Nils Risse", email = "n.risse@uni-koeln.de"},
  {name = "Lukas Pfitzenmaier", email = "l.pfitzenmaier@uni-koeln.de"},
  {name = "Pavlos Kollias"},
  {name = "Bernat Puigdomenech Treserras"}
]
description = "Cloudnet-specific fork of the orbital-radar package."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "dask",
  "netCDF4",
  "numpy",
  "pandas",
  "scipy",
  "xarray"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["mypy", "pytest", "ruff"]
dev = ["pre-commit", "release-version"]

[project.urls]
documentation = "https://igmk.github.io/orbital-radar/overview.html"

[tool.hatch.version]
path = "src/orbital_radar/version.py"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["netCDF4.*", "scipy.*", "skimage.*", "pandas.*"]
ignore_missing_imports = true

[tool.release-version]
filename = "src/orbital_radar/version.py"
pattern = ["__version__ = \"(?P<major>\\d+).(?P<minor>\\d+).(?P<patch>\\d+)\""]
changelog = "CHANGELOG.md"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["I", "F", "E", "W", "T20", "C4"]
