[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbital-radar"
version = "0.0.2"
authors = [
  {name = "Nils Risse", email = "n.risse@uni-koeln.de"},
  {name = "Lukas Pfitzenmaier", email = "l.pfitzenmaier@uni-koeln.de"},
  {name = "Pavlos Kollias"},
  {name = "Bernat Puigdomenech Treserras"}
]
description = "Cloudnet-specific fork of the orbital-radar package."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "dask",
  "netCDF4",
  "numpy",
  "pandas",
  "scipy",
  "xarray",
  "matplotlib"
]

[project.optional-dependencies]
test = ["mypy", "pytest", "ruff"]
dev = ["numpydoc", "pre-commit", "matplotlib"]

[project.urls]
documentation = "https://igmk.github.io/orbital-radar/overview.html"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "netCDF4.*", "scipy.*", "skimage.*", "pandas.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["I"]
